--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -10,6 +10,8 @@
 	position: absolute;
 	top: 5px;
 	right: 5px;
+	border-radius: 50%;
+	cursor: pointer;
 }
 
 .text {
@@ -28,4 +30,25 @@
 .header-menu li {
 	display: inline;
 	margin-right: 10px;
+}
+
+button {
+	width: 100%;
+	border-radius: 50px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	background-color: #b1b1b2;
+	border: solid #000;
+}
+
+.menu2 {
+	padding-bottom: 5px;
+	margin-bottom: 5px;
+	border-bottom: solid #000;
+}
+
+table {
+	margin-top: -8px;
+	margin-bottom: -5px;
+	background-color: #b1b1b2;
 }
