--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -45,24 +45,6 @@
             <mat-cell *matCellDef="let row">{{ row.hireOn }}</mat-cell>
         </ng-container>
 
-        <!-- actions 
-        <ng-container matColumnDef="_id">
-            <mat-header-cell *matHeaderCellDef>
-                Actions
-            </mat-header-cell>
-
-            <mat-cell *matCellDef="let row">
-                <div class="button-row">
-                    <a mat-icon-button color='accent' (click)="edit(row)">
-                        <mat-icon aria-label="Edit">create</mat-icon>
-                    </a>
-                    <a mat-icon-button color='warn' (click)="delete(row)">
-                        <mat-icon aria-label="Delete">clear</mat-icon>
-                    </a>
-                </div>
-            </mat-cell>
-        </ng-container>-->
-
         <ng-container matColumnDef="_id">
             <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
 
@@ -71,13 +53,17 @@
                     <mat-icon>more_vert</mat-icon>
                 </button>
                 <mat-menu #menu="matMenu">
-                    <button mat-menu-item (click)="delete(row)">
-                        <mat-icon>delete</mat-icon>
-                        <span>Delete</span>
+                    <button mat-menu-item (click)="view(row)">
+                        <mat-icon>visibility</mat-icon>
+                        <span>View</span>
                     </button>
                     <button mat-menu-item (click)="edit(row)">
                         <mat-icon>mode_edit</mat-icon>
                         <span>Modify</span>
+                    </button>
+                    <button mat-menu-item (click)="delete(row)">
+                        <mat-icon>delete</mat-icon>
+                        <span>Delete</span>
                     </button>
                 </mat-menu>
             </mat-cell>
